aks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fabric-data-agent
  labels:
    azure.workload.identity/use: "true"
